--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,9 +3,8 @@ springBoot = "3.3.4"
 swt = "3.126.0"
 
 [libraries]
-particle = { module = "io.github.bitfist:particle", version = "0.1.3" }
+particleSpringBootStarter = { module = "io.github.bitfist:particle-spring-boot-starter", version = "0.1.4" }
 springBootPlatform = { module = "org.springframework.boot:spring-boot-dependencies", version.ref = "springBoot" }
-springBootConfigurationProcessor = { module = "org.springframework.boot:spring-boot-configuration-processor", version.ref = "springBoot" }
 # Test
 junit = { module = "org.junit.jupiter:junit-jupiter", version = "5.11.0" }
 mockito = { module = "org.mockito:mockito-core", version = "5.12.0" }
